# INFO2604Project

./: README.md  forms.py  main.py  models.py  package-lock.json  pyproject.toml  requirements.txt  test.db
INFO2604Project/project/public/: about.css  about.html  login.css
flask-server/static/react/: asset-manifest.json  precache-manifest.071d1d01e91b8c631d527cd992eb3365.js  precache-manifest.20cf630d6517b1a114cf089daf94ea83.js  precache-manifest.435cd0646b02eb57450429bc897fbfc0.js  precache-manifest.4ae9b5f107b96f553b1119205f3cc1d3.js  precache-manifest.94358180327f4aa938a7d18d07c22565.js  precache-manifest.ff20dd0e1ad1c92c1e72424e8149e119.js  service-worker.js
flask-server/static/react/js/: 2.13c9a6ba.chunk.js  2.13c9a6ba.chunk.js.map  2.4b8e761c.chunk.js  2.4b8e761c.chunk.js.map  2.8859694e.chunk.js  2.8859694e.chunk.js.map  2.ac0fd532.chunk.js  2.ac0fd532.chunk.js.map  2.f5e0d6b3.chunk.js  (+17 more)
flask-server/templates/: index.html
poetry-demo/poetry_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
project/: package-lock.json  package.json
project/config/: webpack.config.js
project/public/: about.css  about.html  colours.css  index.html  login.css  login.html
project/src/: App.js
project/src/components/: Dairy.js  SideLayout.js  sidelayout.js
static/css/: about.css  login.css
static/js/: login.js  util.js
templates/: about.html  bakery.html  beverages.html  frozen.html  index.html  login.html  other.html  personal.html  recipes.html  signup.html  veggies.html
templates/includes/: logged_in_base.html  login_form.html  signup_form.html
